# leetcode

./: .gitignore  101_symmetric_tree.py  111_minimum_depth_of_binary_tree.py  112_path_sum.py  118_pascals_triangle.py  119_pascals_triangle_ii.py  125_valid_palindrome.py  131_palindrome_partitioning_dfs.py  1325_delete_leaves_with_a_given_value.py  13_roman_to_integer.cpp  1414_find_the_minimum_number_of_fibonacci_numbers_whose_sum_is_k.py  1414_find_the_minimum_number_of_fibonacci_numbers_whose_sum_is_k_2.py  141_linked_list_cycle.py  144_binary_tree_preorder_traversal.py  145_binary_tree_postorder_traversal.py  14_longest_common_prefix.cpp  175_combine_two_tables.sql  176_second_highest_salary.sql  177_nth_highest_salary.sql  180_consecutive_numbers.sql  181_employees_earning_more_than_their_managers.sql  182_duplicate_emails.sql  183_customers_who_never_order.sql  1863_sum_of_all_subset_xor_totals.cpp  1863_sum_of_all_subset_xor_totals.py  191_number_of_1_bits.py  193_valid_phone_numbers.bash  196_delete_duplicate_emails.sql  197_rising_temperature.sql  200_number_of_islands.py  20_valid_parentheses.cpp  221_maximal_square_bfs.cpp  221_maximal_square_bfs.py  2331_evaluate_boolean_binary_tree.py  23_merge_k_sorted_lists.py  23_merge_k_sorted_lists_v2.py  24_swap_nodes_in_pairs.py  2624_snail_traversal.js  2658_maximum_number_of_fish_in_a_grid.py  307_range_sum_query_mutable.py  (+52 more)
cana/: fib.py  major.py  test_major.py  test_merge_inplace.py  test_merge_sort.py
datastruct/: linkedlist.cpp
functional/: functional.js  functional.py
grafos/: tabuleiro_dot.py
(+31 files in other folders)
